@@ -100,7 +100,4 @@ function smarty_function_cycle($params, $smarty)
     
     return $retval;
 }
-
-/* vim: set expandtab: */
-
 ?>
