@@ -25,7 +25,4 @@ function smarty_function_escape_special_chars($string)
     }
     return $string;
 }
-
-/* vim: set expandtab: */
-
 ?>
